# unsloth-optimiser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: DESIGN_SPECIFICATION.md  DESIGN_SPECIFICATION_COMPLETE.md
docs/superpowers/plans/: 2026-04-20-unsloth-optimiser-implementation.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  styles.css
frontend/src/__tests__/: App.test.js  AppRouting.test.js  ConfigForm.test.js  WebSocket.test.js
frontend/src/api/: client.js
frontend/src/components/: ConfigForm.js  Dashboard.js  Layout.js  Navigation.js  RealtimeMonitor.js  TaskList.js
frontend/src/context/: ToastContext.js
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: CreateTask.js  TaskDetail.js
k8s/: deployment.yaml  service.yaml
src/api/: config.py  database.py  main.py
src/api/models/: base.py  task.py  user.py
src/api/monitoring/: __init__.py  health.py  metrics.py
src/api/routers/: auth.py  tasks.py
src/api/schemas/: auth.py  task.py
src/api/security/: __init__.py  cors.py  csrf.py
src/api/tasks/: __init__.py  celery.py  manager.py  optimization.py  orchestrator.py  router.py
tests/: conftest.py  test_api_infrastructure.py  test_api_integration.py  test_auth.py  test_celery_integration.py  test_deployment_config.py  test_e2e.py  test_end_to_end.py  test_health.py  test_monitoring.py  test_optimization_workers.py  test_orchestrator.py  test_security.py  test_task_routes.py  test_workflow.py
tests/db/: test_database.py
(+13 files in other folders)
