[project]
name = "unsloth-optimiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "redis>=7.4.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.21.0",
    "unsloth>=2026.4.6",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["src*", "api*", "celery*", "db*", "models*", "schemas*", "services*", "tasks*", "utils*", "websocket*"]
exclude = ["tests*", "docs*"]

[project.optional-dependencies]
optimization = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.21.0",
    "unsloth>=2026.4.6",
    "tokenizers>=0.15.0",
    "safetensors>=0.4.0"
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pylint>=3.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0"
]

[project.scripts]
unsloth-optimiser = "main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "src"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true